--- a/example-deployment/app/docker-compose.yaml
+++ b/example-deployment/app/docker-compose.yaml
@@ -7,10 +7,10 @@ services:
     expose:
       - "80"
     environment:
-      - VIRTUAL_HOST=cs3map.ethz.ch
-      - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=cs3map.ethz.ch
-      - LETSENCRYPT_EMAIL=marc.winkler@ethz.ch
+      - VIRTUAL_HOST=host.example.com
+      - VIRTUAL_PORT=APPLICATION_PORT
+      - LETSENCRYPT_HOST=host.example.com
+      - LETSENCRYPT_EMAIL=no-one@example.com
     restart: always
 
 networks:
